--- a/about.html
+++ b/about.html
@@ -224,37 +224,136 @@
           </div>
         </section>
 			</main>
-			<footer class="header header_footer">
-	<div class="header__content _container">
-		<a href="main.html" class="header__logo">
-			<picture>
-				<source data-srcset="img/logo.webp" srcset="" type="image/webp">
-				<img data-src="img/logo.png" src="" alt="">
-			</picture>
-		</a>
-		<div class="header__slogan">Наркологичесткая помощь<br> <b>на дому и в клинике</b> {вашем городе}</div>
-		<div class="header__info info-header">
-			<div class="info-header__column info-header__column_1">
-				<div class="info-header__item info-header__item_shedule">
-					<span class="info-header__icon"></span>
-					<div class="info-header__text">работаем <span>24 / 7</span></div>
-				</div>
-				<div class="info-header__item info-header__item_region info-header__item_mail">
-					<span class="info-header__icon"></span>
-					<a href="mailto:medusluga@gmail.com" class="info-header__text">medusluga@gmail.com</a>
-				</div>
-			</div>
-			<div class="info-header__column info-header__column_2">
-				<div class="info-header__item info-header__item_phone">
-					<a href="tel:+79581117219" class="info-header__text">{+7(958)111-7-219}</a>
-				</div>
-				<div class="info-header__item info-header__item_callback">
-					<span class="info-header__icon"></span>
-					<a href="#callback" class="info-header__text _popup-link">Обратный звонок</a>
-				</div>
-			</div>
-		</div>
+			<footer class="footer">
+	<div class="_container">
+    <div class="footer__row">
+
+      <div class="footer__column">
+        <h2 class="footer__title">Инструменты</h2>
+        <ul class="footer__list">
+          <li>
+            <a href="#" class="footer__link">
+              <svg id="Lag_1" data-name="Lag 1" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                <g>
+                  <path class="cls-1" d="M24.87,4H15.13A12.15,12.15,0,0,0,3,16.1v3.5a12.16,12.16,0,0,0,8.69,11.69l-.09,6.24a.51.51,0,0,0,.32.47h.18a.51.51,0,0,0,.38-.2l5.33-6.07h7.06A12.14,12.14,0,0,0,37,19.6V16.1A12.15,12.15,0,0,0,24.87,4ZM36,19.6A11.15,11.15,0,0,1,24.87,30.73H17.59a.5.5,0,0,0-.38.17l-4.59,5.22.08-5.26a.5.5,0,0,0-.37-.49A11.17,11.17,0,0,1,4,19.6V16.1A11.15,11.15,0,0,1,15.1,5h9.77A11.15,11.15,0,0,1,36,16.1Z"/>
+                  <path class="cls-1" d="M29.65,14.83a1.13,1.13,0,0,0-.64-.2h-.08a.87.87,0,0,0-.31.1l-5.27,1.91V14.87a1,1,0,0,0-1-1H12a1,1,0,0,0-1,1v7.24a1,1,0,0,0,1,1H22.35a1,1,0,0,0,1-1V20.43l5.35,1.91H29a1.13,1.13,0,0,0,1.13-1.12V15.75A1.12,1.12,0,0,0,29.65,14.83Zm-7.3,7.28H12V14.87H22.35Zm6.78-.89c0,.07-.06.12-.17.15l-5.61-2V17.7L29,15.63h0a.14.14,0,0,1,.06.11Z"/>
+                </g>
+              </svg>
+              <span>Видеоконсультации</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">
+              <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g transform="translate(-300.000000, -200.000000)">
+                        <g transform="translate(300.000000, 200.000000)">
+                            <g transform="translate(7.000000, 7.000000)">
+                                <polyline stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" points="8.27581632 12.4908201 3.77265369 12.4908201 0.0769929324 25.8567931 25.9466182 25.8567931 22.2509575 12.4908201 17.7477948 12.4908201"></polyline>
+                                <path d="M8.27581632,12.4908201 C7.29092273,10.1794614 6.54439926,8.01608323 6.54439926,6.7625459 C6.54439926,3.07162791 9.43994946,0.0795593635 13.0118056,0.0795593635 C16.5836617,0.0795593635 19.4792119,3.07162791 19.4792119,6.7625459 C19.4792119,8.01608323 18.7326884,10.1794614 17.7477948,12.4908201 C15.8315947,16.9856059 13.0118056,22.0379437 13.0118056,22.0379437 C13.0118056,22.0379437 10.1920164,16.9856059 8.27581632,12.4908201 L8.27581632,12.4908201 Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M14.2255818,4.18897972 C13.4496149,4.34809845 12.8083365,5.07166993 12.4977487,6.00996794 C12.4759707,6.07596033 12.4186778,6.16439685 12.3432925,6.19287072 L11.9218044,6.33524011 C11.8209555,6.36471895 11.7268075,6.26623283 11.6963183,6.19287072 C11.3823801,5.40632173 10.8767954,4.89178202 10.286109,5.01572713 C9.72390152,5.13732734 9.06888627,5.80897586 9.27192424,6.86217434 C9.49741031,8.03730801 11.7653378,10.1708389 12.238423,10.1835684 C12.7292656,10.193283 15.4565415,7.85206031 15.8760193,5.98752382 C16.2097252,4.4914728 15.053816,4.01143672 14.2255818,4.18897972 L14.2255818,4.18897972 Z"></path>
+                            </g>
+                        </g>
+                    </g>
+                </g>
+              </svg>
+              <span>Поиск медицинских услуг</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">
+              <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                    <g transform="translate(-400.000000, -200.000000)" stroke="#B20C1C" stroke-width="1.5">
+                        <g transform="translate(400.000000, 200.000000)">
+                            <g transform="translate(5.000000, 7.000000)">
+                                <path d="M28.3498542,25.9241983 L1.66763848,25.9241983 C0.99755102,25.9241983 0.454810496,25.3814577 0.454810496,24.7113703 L0.454810496,8.22539942 C0.454810496,7.55591837 0.99755102,7.01257143 1.66763848,7.01257143 L28.3498542,7.01257143 C29.0199417,7.01257143 29.5626822,7.55591837 29.5626822,8.22539942 L29.5626822,24.7113703 C29.5626822,25.3814577 29.0199417,25.9241983 28.3498542,25.9241983 L28.3498542,25.9241983 Z" stroke-linejoin="round"></path>
+                                <path d="M7.73177843,6.86030087 L7.73177843,3.65782857 C7.73177843,1.88891895 9.12774344,0.454749854 10.8505656,0.454749854 L19.1669271,0.454749854 C20.8897493,0.454749854 22.2857143,1.88891895 22.2857143,3.65782857 L22.2857143,6.86030087" stroke-linejoin="round"></path>
+                                <polygon points="18.6427429 14.9407673 16.2170869 14.9407673 16.2170869 12.5151114 13.1850169 12.5151114 13.1850169 14.9407673 10.7593609 14.9407673 10.7593609 17.9728373 13.1850169 17.9728373 13.1850169 20.3984933 16.2170869 20.3984933 16.2170869 17.9728373 18.6427429 17.9728373"></polygon>
+                            </g>
+                        </g>
+                    </g>
+                </g>
+              </svg>
+              <span>Поиск медицинских учреждений </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__column">
+        <h2 class="footer__title"><a href="#">О med24.online</a></h2>
+        <ul class="footer__list">
+          <li>
+            <a href="#" class="footer__link">IT безопасность</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">О компании</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">О платформе</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Связаться с нами</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Политика конфиденциальности</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Политика использования файлов Cookie</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__column">
+        <h2 class="footer__title footer__title_empty"></h2>
+        <ul class="footer__list">
+          <li>
+            <a href="#" class="footer__link">Новости med24.online</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Клинические случаи</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">FAQ</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__column"></div>
+
+    </div>
 	</div>
+
+  <div class="footer__content">
+    <div class="_container">
+      <div class="footer__info">
+        <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390 <br> Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+        <p class="footer__text">Материалы, представленные на сайте med24.online, носят информационный характер и не могут быть использованы для постановки диагноза, назначения лечения и не заменяет прием врача. Компания не несёт ответственности за возможные негативные последствия, возникшие в результате использования информации, размещенной на сайте. Имеются противопоказания, необходима консультация специалиста.</p>
+        <p class="footer__text"><span>18+</span> Информация, представленная на сайте, не может быть использавана для постановки диагноза, назначения лечения и не заменяет прием врача.</p>
+        <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
+      </div>
+      <div class="footer__contact">
+        <h3 class="footer__title">Мы в социальных сетях:</h3>
+        <div class="footer__social">
+          <a href="#" class="footer__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="12" viewBox="0 0 21 12"><defs><path d="M1296.23383,9563.81725h1.19488c0,0 0.36072,-0.04013 0.54531,-0.24422c0.16949,-0.18746 0.16422,-0.53945 0.16422,-0.53945c0,0 -0.02357,-1.64875 0.72041,-1.89182c0.73368,-0.2402 1.67576,1.59371 2.67426,2.29712c0.75485,0.53429 1.32866,0.41677 1.32866,0.41677l2.66956,-0.03841c0,0 1.39652,-0.08828 0.73425,-1.21764c-0.05413,-0.09115 -0.38567,-0.83527 -1.98509,-2.36133c-1.67416,-1.59772 -1.44951,-1.33975 0.56671,-4.10352c1.22818,-1.68429 1.71902,-2.7116 1.56567,-3.15131c-0.14626,-0.41849 -1.04942,-0.30842 -1.04942,-0.30842l-3.00579,0.01949c0,0 -0.22305,-0.0321 -0.38818,0.06937c-0.16148,0.09918 -0.26527,0.33307 -0.26527,0.33307c0,0 -0.47585,1.30134 -1.11042,2.40891c-1.33839,2.33725 -1.87328,2.46165 -2.09221,2.31661c-0.50903,-0.33881 -0.38177,-1.35867 -0.38177,-2.08386c0,-2.26559 0.33417,-3.21035 -0.65071,-3.454c-0.3265,-0.08255 -0.56717,-0.13587 -1.40282,-0.14447c-1.07265,-0.01089 -1.9804,0.00287 -2.49401,0.26256c-0.34218,0.17256 -0.60596,0.55665 -0.4454,0.57729c0.1989,0.02752 0.64877,0.12497 0.88715,0.45977c0.30785,0.43168 0.29709,1.39822 0.29709,1.39822c0,0 0.17727,2.66689 -0.41325,2.99709c-0.40489,0.22816 -0.96073,-0.23619 -2.15401,-2.3556c-0.61146,-1.08693 -1.073,-2.28852 -1.073,-2.28852c0,0 -0.08904,-0.22415 -0.24776,-0.34454c-0.19249,-0.14561 -0.46188,-0.1909 -0.46188,-0.1909l-2.8561,0.01949c0,0 -0.42881,0.01204 -0.58628,0.20409c-0.14008,0.17084 -0.01122,0.5234 -0.01122,0.5234c0,0 2.23595,5.38078 4.76807,8.09238c2.32189,2.48516 4.95838,2.32235 4.95838,2.32235z" id="Path-0"/></defs><g transform="matrix(1,0,0,1,-1286,-9552)"><g><use xlink:href="#Path-0"fill-opacity="1"/></g></g></svg>
+          </a>
+          <a href="#" class="footer__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><defs><path d="M1344.00101,9552.17857v12.64134c0,0.59736 -0.21389,1.11044 -0.6419,1.5381c-0.42801,0.42824 -0.94116,0.64207 -1.53854,0.64207h-12.64114c-0.59772,0 -1.11053,-0.21383 -1.53877,-0.64207c-0.42801,-0.42766 -0.64201,-0.94075 -0.64201,-1.5381v-12.64134c0,-0.59793 0.214,-1.11101 0.64201,-1.53868c0.42824,-0.42766 0.94093,-0.64264 1.53877,-0.64264h12.64114c0.5975,0 1.11053,0.21498 1.53854,0.64264c0.42801,0.42824 0.6419,0.94075 0.6419,1.53868zM1332.10167,9558.46571c0,0.91495 0.33394,1.69575 1.00182,2.34127c0.66788,0.64551 1.47034,0.96827 2.40761,0.96827c0.9446,0 1.7506,-0.32276 2.41859,-0.96827c0.66776,-0.64551 1.0017,-1.42631 1.0017,-2.34127c0,-0.91495 -0.33394,-1.69518 -1.0017,-2.34127c-0.66799,-0.64551 -1.47411,-0.96827 -2.41859,-0.96827c-0.93727,0 -1.73985,0.32276 -2.40761,0.96827c-0.66788,0.64608 -1.00182,1.42631 -1.00182,2.34127zM1342.0752,9564.36645v-7.17399h-1.49448c0.14751,0.4655 0.22156,0.94877 0.22156,1.45039c0,0.92986 -0.23598,1.78748 -0.7085,2.57402c-0.47241,0.78596 -1.1142,1.40682 -1.92593,1.86487c-0.81184,0.45748 -1.6975,0.68679 -2.65675,0.68679c-1.45386,0 -2.69726,-0.4999 -3.73043,-1.49969c-1.03317,-1.00037 -1.54964,-2.20884 -1.54964,-3.62598c0,-0.50162 0.0737,-0.98546 0.22121,-1.45039h-1.56063v7.17399c0,0.1909 0.06454,0.35199 0.19375,0.48098c0.12909,0.12841 0.28965,0.19319 0.48145,0.19319h11.83285c0.18471,0 0.34321,-0.06478 0.4763,-0.19319c0.13264,-0.12956 0.19924,-0.29008 0.19924,-0.48098zM1342.0752,9552.65439c0,-0.20638 -0.0737,-0.38524 -0.22156,-0.53716c-0.14751,-0.15077 -0.32822,-0.22644 -0.54234,-0.22644h-1.92604c-0.21389,0 -0.39482,0.07567 -0.54234,0.22644c-0.14751,0.15192 -0.22133,0.33078 -0.22133,0.53716v1.82646c0,0.21326 0.07381,0.39499 0.22133,0.54175c0.14751,0.14848 0.32845,0.22186 0.54234,0.22186h1.92604c0.21412,0 0.39482,-0.07338 0.54234,-0.22186c0.14786,-0.14676 0.22156,-0.32849 0.22156,-0.54175z" id="Path-1"/></defs><g transform="matrix(1,0,0,1,-1327,-9550)"><g><use xlink:href="#Path-1" fill="#ffffff" fill-opacity="1"/></g></g></svg>
+          </a>
+          <a href="#" class="footer__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="20" viewBox="0 0 10 20"><defs><path d="M1377.42496,9568.36105h-3.99044v-9.3771h-1.99368v-3.23099h1.99368v-1.9394c0,-2.6365 1.12541,-4.20442 4.32438,-4.20442h2.66315v3.23271h-1.66477c-1.24523,0 -1.32717,0.4506 -1.32717,1.29389l-0.00515,1.61722h3.01586l-0.35248,3.23099h-2.66338v9.3771z" id="Path-2"/></defs><g transform="matrix(1,0,0,1,-1371,-9549)"><g><use xlink:href="#Path-2" fill-opacity="1"/></g></g></svg>
+          </a>
+          <a href="#" class="footer__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="20" viewBox="0 0 12 20"><defs><path d="M1414.98116,9562.77389c-1.41884,-0.15077 -2.6976,-0.50792 -3.79303,-1.38504c-0.1355,-0.1095 -0.27592,-0.21555 -0.40009,-0.33766c-0.47939,-0.47123 -0.52746,-1.01183 -0.14854,-1.56849c0.32467,-0.47582 0.86941,-0.60366 1.43555,-0.33193c0.10975,0.05446 0.21423,0.12039 0.31403,0.19205c2.04117,1.43663 4.8444,1.47676 6.89335,0.06421c0.20302,-0.15937 0.42,-0.28836 0.67142,-0.35543c0.48878,-0.12899 0.94482,0.05561 1.20724,0.49417c0.29949,0.50104 0.29583,0.98833 -0.07336,1.37701c-0.5666,0.59506 -1.24809,1.02674 -2.005,1.32771c-0.71583,0.28492 -1.49963,0.42766 -2.27589,0.52226c0.11719,0.13013 0.17223,0.19491 0.2457,0.27116c1.05354,1.08292 2.11178,2.1647 3.162,3.2522c0.35797,0.37091 0.43247,0.83011 0.23563,1.26064c-0.21561,0.47353 -0.69763,0.78138 -1.1705,0.7487c-0.29961,-0.02064 -0.53352,-0.1737 -0.74089,-0.38754c-0.79525,-0.82036 -1.60549,-1.62467 -2.38449,-2.45993c-0.22671,-0.24307 -0.33566,-0.19549 -0.5357,0.01376c-0.79994,0.84386 -1.61282,1.67569 -2.43061,2.50064c-0.36736,0.37091 -0.80429,0.43856 -1.23024,0.22587c-0.45273,-0.22415 -0.74078,-0.69711 -0.71869,-1.17407c0.01534,-0.32161 0.16994,-0.5664 0.38567,-0.78826c1.04267,-1.06687 2.0826,-2.13546 3.12298,-3.20519c0.06901,-0.06994 0.13321,-0.14676 0.23346,-0.25683zM1415.84553,9559.05905c-2.5312,-0.0086 -4.60648,-2.15896 -4.59148,-4.75534c0.01453,-2.62561 2.09106,-4.74158 4.64699,-4.73527c2.56062,0.00745 4.61609,2.1538 4.60339,4.8075c-0.01316,2.59179 -2.10251,4.69228 -4.65889,4.6831zM1418.14522,9554.31002c-0.00446,-1.29045 -1.00674,-2.31604 -2.26273,-2.31833c-1.26652,-0.00057 -2.27772,1.04451 -2.26799,2.34585c0.00927,1.28414 1.02013,2.30343 2.27966,2.29942c1.25553,-0.00459 2.25529,-1.03706 2.25105,-2.32693z" id="Path-3"/></defs><g transform="matrix(1,0,0,1,-1410,-9549)"><g><use xlink:href="#Path-3" fill-opacity="1"/></g></g></svg>
+          </a>
+        </div>
+        <a href="#" class="footer__links">Политика конфиденциальности</a>
+        <a href="#" class="footer__links">Пользовательское соглашение</a>
+      </div>
+    </div>
+  </div>
 </footer>
 		</div>
 		<div class="popup popup_callback">
