--- a/about.html
+++ b/about.html
@@ -331,7 +331,12 @@
   <div class="footer__content">
     <div class="_container">
       <div class="footer__info">
-        <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390 <br> Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+        <div class="footer__block">
+          <a href="main.html" class="footer__logo">
+            <img data-src="img/logo.svg" src="" alt="">
+          </a>
+          <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390 <br> Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+        </div>
         <p class="footer__text">Материалы, представленные на сайте med24.online, носят информационный характер и не могут быть использованы для постановки диагноза, назначения лечения и не заменяют прием врача. Компания не несёт ответственности за возможные негативные последствия, возникшие в результате использования информации, размещенной на сайте. Имеются противопоказания, необходима консультация специалиста.</p>
         <p class="footer__text footer__text_dflex"><span>14+</span> Информация, представленная на сайте, не может быть использавана для постановки диагноза, назначения лечения и не заменяет прием врача.</p>
         <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
@@ -349,12 +354,6 @@
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="24" viewBox="0 0 10 20"><defs><path d="M1377.42496,9568.36105h-3.99044v-9.3771h-1.99368v-3.23099h1.99368v-1.9394c0,-2.6365 1.12541,-4.20442 4.32438,-4.20442h2.66315v3.23271h-1.66477c-1.24523,0 -1.32717,0.4506 -1.32717,1.29389l-0.00515,1.61722h3.01586l-0.35248,3.23099h-2.66338v9.3771z" id="Path-2"/></defs><g transform="matrix(1,0,0,1,-1371,-9549)"><g><use xlink:href="#Path-2" fill-opacity="1"/></g></g></svg>
           </a>
         </div>
-        <a href="main.html" class="footer__logo">
-          <picture>
-            <source data-srcset="img/logo.webp" srcset="" type="image/webp">
-            <img data-src="img/logo.png" src="" alt="">
-          </picture>
-        </a>
       </div>
     </div>
   </div>
