--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
 
               <div class="about__column about__column_right">
                 <div class="about__contents contents-about">
-                  <h2 class="contents-about__title">Оглавление</h2>
+                  <h2 class="contents-about__title">Оглавление <a href="#a0" class="contents-about__back-link _goto-block"></a></h2>
                   <button class="contents-about__button">Оглавление</button>
                   <div class="contents-about__body">
                     <a href="#a1" class="contents-about__title-list _goto-block">Общие положения</a>
@@ -335,11 +335,13 @@
           <a href="main.html" class="footer__logo">
             <img data-src="img/logo.svg" src="" alt="">
           </a>
-          <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390 <br> Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+          <div class="footer__block-text">
+            <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390 <br> Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+            <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
+          </div>
         </div>
         <p class="footer__text">Материалы, представленные на сайте med24.online, носят информационный характер и не могут быть использованы для постановки диагноза, назначения лечения и не заменяют прием врача. Компания не несёт ответственности за возможные негативные последствия, возникшие в результате использования информации, размещенной на сайте. Имеются противопоказания, необходима консультация специалиста.</p>
-        <p class="footer__text footer__text_dflex"><span>14+</span> Информация, представленная на сайте, не может быть использавана для постановки диагноза, назначения лечения и не заменяет прием врача.</p>
-        <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
+        <p class="footer__text footer__text_dflex"><span>14+</span></p>        
       </div>
       <div class="footer__contact">
         <h3 class="footer__title">Мы в социальных сетях:</h3>
