--- a/articles.html
+++ b/articles.html
@@ -277,7 +277,7 @@
           </a>
           <div class="footer__block-text">
             <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390</p>
-            <p class="footer__text">Свидетельство о регистрации в СМИ серия Эл №С77-79982 от 25.12.2020 г.</p>
+            <p class="footer__text">Свидетельство о регистрации в СМИ <a href="https://rkn.gov.ru/mass-communications/reestr/media/?id=841051&page=">серия Эл №С77-79982</a> от 25.12.2020 г.</p>
             <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
           </div>
         </div>
