--- a/services.html
+++ b/services.html
@@ -252,7 +252,7 @@
             <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
           </div>
         </div>
-        <p class="footer__text"><span>14+</span>Материалы, представленные на сайте med24.online, носят информационный характер и не могут быть использованы для постановки диагноза, назначения лечения и не заменяют прием врача. Компания не несёт ответственности за возможные негативные последствия, возникшие в результате использования информации, размещенной на сайте. Имеются противопоказания, необходима консультация специалиста.</p>
+        <p class="footer__text footer__text_dflex"><span>14+</span>Материалы, представленные на сайте med24.online, носят информационный характер и не могут быть использованы для постановки диагноза, назначения лечения и не заменяют прием врача. Компания не несёт ответственности за возможные негативные последствия, возникшие в результате использования информации, размещенной на сайте. Имеются противопоказания, необходима консультация специалиста.</p>
       </div>
       <div class="footer__contact">
         <h3 class="footer__title">Мы в социальных сетях:</h3>
