--- a/about.html
+++ b/about.html
@@ -309,10 +309,10 @@
                   <button class="contents-about__button">Оглавление</button>
                   <div class="contents-about__body">
                     <a href="#a1" class="contents-about__title-list _goto-block">Общие положения</a>
-                    <ul class="contents-about__list">
-                      <li><a href="#a11" class="contents-about__link _goto-block">Предмет политики конфендициальности</a></li>
-                      <li><a href="#a12" class="contents-about__link _goto-block">Цели сбора персональной информации пользователя</a></li>
-                    </ul>
+                    <div class="contents-about__list">
+                      <a href="#a11" class="contents-about__link _goto-block">Предмет политики конфендициальности</a>
+                      <a href="#a12" class="contents-about__link _goto-block">Цели сбора персональной информации пользователя</a>
+                    </div>
                     <a href="#a2" class="contents-about__title-list _goto-block">Способы и сроки обработки персональной информации</a>
                     <a href="#a3" class="contents-about__title-list _goto-block">Разрешение споров</a>
                     <a href="#a4" class="contents-about__title-list _goto-block">Дополнительные условия</a>
